[package]
name = "lambda_twist"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
keywords = ["perspective", "three", "point", "projection", "p3p"]
categories = ["algorithms", "computer-vision"]
description = "Small library for solving a simplified version of the p3p problem."

homepage = "https://github.com/kpwelsh/LambdaTwistP3P"
repository = "https://github.com/kpwelsh/LambdaTwistP3P"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lambda_twist"
crate-type = ["rlib"]

[dependencies]
nalgebra = "*"